rearranged dom examples in separate subfolder

--- a/browser/dom-examples/04-dataset.html
+++ b/browser/dom-examples/04-dataset.html
@@ -16,7 +16,8 @@
     <span id="rating" class="rating" data-scale="100">80</span>
 
     <script>
-        const ratingScale = document.querySelector('#rating').dataset.ratingScale = "100"
+        // const ratingScale = document.querySelector('#rating').dataset.ratingScale = "100"
+        const ratingScale = document.querySelector('#rating').dataset.scale = "100"
     </script>
 </body>
 </html>
