--- a/browser/dom-examples/02-create.html
+++ b/browser/dom-examples/02-create.html
@@ -12,7 +12,7 @@
 
         // create and append to DOM
         const div = document.createElement('div')
-        const p = document.createComment('p')
+        const p = document.createElement('p')
         p.innerHTML = "Hello CF!"
 
         div.appendChild(p)
