--- a/browser/test.html
+++ b/browser/test.html
@@ -6,17 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Header 1</h1>
-    <p>something</p>
-    <h1>Header 1</h1>
-    <p>something else</p>
+    <h1 id="title"></h1>
+    <p class="aueb-text"></p>
+    <div class="main"></div>
 
-    <script>
-        const headers = document.querySelectorAll('h1')
-        headers.forEach(header => {
-            header.textContent = "Header";
-        });
-        console.log(headers)
-    </script>
+    <script src="./test.js"></script>
 </body>
 </html>
