--- a/browser/bgchanger/index.html
+++ b/browser/bgchanger/index.html
@@ -31,7 +31,7 @@
     <div class="d-flex flex-column align-items-center justify-content-center">
       <div class="bg-dark py-1 px-5 text-white text-center rounded-3">
         <h4>Background color:</h4>
-        <h4 id="hex">#red</h4>
+        <h4 id="hex">white</h4>
       </div>
       <button id="btn" class="btn btn-lg btn-outline-primary mt-4">Click Me</button>
     </div>
