--- a/browser/notes-app/index.html
+++ b/browser/notes-app/index.html
@@ -1,37 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vanilla JS Notes App</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-
 <body>
     <div class="w-[300px] h-[500px] my-5 mx-auto border-2 border-black rounded-[5px]">
-        <header>
-            <div class="flex justify-center items-center">
+        <header class="flex justify-center items-center">  
                 <span id="dateTxt"
-                    class="w-full text-center h-[50px] border-b border-black text-[rgb(180,10,10)] text-[1rem]">21
-                    Φεβρουαρίου 2025<br>18:15:00</span>
-            </div>
+                class="w-full text-center h-[50px] border-b border-black text-[rgb(180,10,10)] text-[1rem]">
+                    Ημερομηνία<br>Ώρα
+                </span>
         </header>
-        <main>
-            <div id="notesWrapper" class="h-[400px] border-b border-black overflow-auto">
-
-            </div>
+        <main id="notesWrapper" class="h-[400px] border-b border-black overflow-auto">
         </main>
-        <footer>
-            <div class="flex justify-between items-center px-[5px] h-[45px]">
+        <foote class="flex justify-between items-center px-[5px] h-[45px]">
                 <input type="text" id="inputNote" class="w-[200px] h-[40px] pl-[5px] border border-black"
-                    placeholder="Insert note">
-                <button type="button" id="addNoteBtn" class="w-[40px] h-[40px] border rounded-full">+</button>
-            </div>
+                placeholder="insert note">
+                <button type="button" id="addNoteBtn" class="w-[40px] h-[40px] border border-black rounded-full">+</button>
         </footer>
     </div>
-
-    <script src="./main.js"></script>
-
 </body>
-
 </html>
