--- a/browser/notes-app/index.html
+++ b/browser/notes-app/index.html
@@ -22,5 +22,6 @@
                 <button type="button" id="addNoteBtn" class="w-[40px] h-[40px] border border-black rounded-full">+</button>
         </footer>
     </div>
+    <script src="./main.js"></script>
 </body>
 </html>
