--- a/browser/notes-app/index.html
+++ b/browser/notes-app/index.html
@@ -16,7 +16,7 @@
         </header>
         <main id="notesWrapper" class="h-[400px] border-b border-black overflow-auto">
         </main>
-        <foote class="flex justify-between items-center px-[5px] h-[45px]">
+        <footer class="flex justify-between items-center px-[5px] h-[45px]">
                 <input type="text" id="inputNote" class="w-[200px] h-[40px] pl-[5px] border border-black"
                 placeholder="insert note">
                 <button type="button" id="addNoteBtn" class="w-[40px] h-[40px] border border-black rounded-full">+</button>
