--- a/jquery/hello-world.html
+++ b/jquery/hello-world.html
@@ -12,7 +12,12 @@
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script>
-        $(document).ready(function() {
+
+        // $(document).ready(function() {       // before version 3
+            
+        // })
+
+        $(function() {
             // sayHello()
             // sayHello2()
             // sayHello3()
@@ -24,9 +29,9 @@
         // const sayHello3 = () => $('#root').html('<h1>Hello Coding!</h1>')
 
         const $p = $('<p>')
-            $p.html('Hello World!')
-            $('body').append($p)
-            $p.('Hello Coding').appendTo($('body'))
+            // $p.html('Hello World!')
+            // $('body').append($p)
+            $p.html('Hello Coding').appendTo($('body'))
         const createAndAppend = () => $('#root').append($('<p>World</p>'))
     </script>
 </body>
