--- a/browser/AJAX/fetch-api-get.html
+++ b/browser/AJAX/fetch-api-get.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fetch API GET</title>
 </head>
 <body>
     <h1>FETCH API GET Request GET Request</h1>
