minor code modifications - async / await added

--- a/browser/AJAX/xhr-post.html
+++ b/browser/AJAX/xhr-post.html
@@ -6,7 +6,7 @@
     <title>XMLHttpRequest POST</title>
 </head>
 <body>
-    <h1>XMLHttpRequest POST Request</h1>
+    <h1>XMLHttpRequest POST</h1>
     <button type="button" onclick="postData()">Create Post</button>
     <p id="postResponse"></p>
 
