--- a/browser/AJAX/fetch-api-post.html
+++ b/browser/AJAX/fetch-api-post.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fetch API</title>
+    <title>Fetch API POST</title>
 </head>
 <body>
     <h1>Fetch API Post</h1>
@@ -23,9 +23,9 @@
                     body: "Coding Factory says 'Hello'.",
                     userId: 1
                 }
-
                 )
-            })
+            }
+            )
             .then(response => {
                 if (!response.ok) throw new Error(`HTTP Error. Status: ${response.status}`);
                 return response.json();
